--- a/LCMS/pom.xml
+++ b/LCMS/pom.xml
@@ -9,4 +9,14 @@
     <module>Client</module>
     <module>Server</module>
   </modules>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
