--- a/LCMS/Client/pom.xml
+++ b/LCMS/Client/pom.xml
@@ -21,4 +21,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  	<build>
+		<defaultGoal>compile</defaultGoal>
+	</build>
 </project>
